# plasticity-modeling

./: .gitignore  LICENSE  README.md  conductance_simulations.py  dp_ratio_array.slurm  experiment.slurm  pyproject.toml  requirements_cluster.txt  run_dp_ratio_array.sh  run_dp_ratio_simulations.py  test_corrModel1.ipynb  workspace.ipynb
_preparing_grid_searchexamples/: base.py  custom_grid_search.py  grid_search_example.py  parameter_sensitivity.py
cluster/: cluster_setup.md  iaf_array_full.sh  iaf_array_test.sh  iaf_hofer_full.sh  iaf_hofer_test.sh
configs/: basic_ica.yaml  correlated.yaml  correlated_firstrun.yaml  hofer.yaml  hofer_explore.yaml  hofer_noinhibition.yaml  hofer_replacement.yaml  hofer_with_replacement.yaml  ica.yaml  single_source_corrs.yaml
correlation1_freezeEXCLAMATIOn/: runo2_corrD.m  script_corrD.m  testStimGen.m  testStimGeneration.m
notebooks/: conductance.ipynb  explore_elife_data.ipynb  iaf_correlation.ipynb  iaf_correlation_analysis.ipynb  iaf_correlation_no_apical.ipynb  iaf_correlation_run.ipynb  iaf_hofer.ipynb  iaf_hofer_analysis.ipynb  iaf_hofer_run.ipynb  iaf_ica.ipynb  iaf_ica_run.ipynb  iaf_sim_plots.ipynb  iaf_testing_hofer_sims.ipynb  iaf_testing_sims.ipynb  improve_iaf.ipynb
old_directories/: plasticitySchematic.m
old_src/: iaf.py  plotting.py  run.py
rebuild/: IaF.py  build.py  run.py  step.py
scripts/: biophysical_stdp.py  build_schematics.py  classic_input_correlation.py  conductance_data.py  experimental.py  iaf_correlation.py  iaf_hofer_reconstruction.py  input_correlation.py  make_figures.py  testing_iaf.py  (+3 more)
(+153 files in other folders)
