[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plasticity-modeling"
dynamic = ["version"]
description = "Code to generate and analyze plasticity models."
authors = [
    { name = "Andrew Landau" }
]
dependencies = [
    "numpy",
    "numba",
    "pandas",
    "scipy",
    "tqdm",
    "pyyaml",
    "pydantic",
    "freezedry",
    "matplotlib",
    "syd",
]
requires-python = ">=3.9"

[project.optional-dependencies]
cpu = ["torch"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 120